@@ -7,6 +7,13 @@ Significant changes to svnwrap (newest changes first).
 Version 0.7.0
 =============
 
+- Capture stderr from "svn" client, highlight these lines, and repeat them
+  at the end of the operation so they are not overlooked.  To facilitate this,
+  the method of restoring stdout (and now stderr as well) when invoking
+  SVN_EDITOR was changed.  When invoking the editor, stdout and stderr are
+  now connected to the platform-specific console device ('/dev/tty' on Unix
+  machines, and 'CON:' on Windows).
+
 - Add "pge" and "pgi" shortcuts to propget svn:externals and svn:ignores.
 
 - Support svn v1.7+ svn:externals diff format.
